--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,15 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "arrowParens": "avoid",
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-svelte"],
+  "pluginSearchDirs": ["."],
+  "semi": false,
+  "singleQuote": true,
+  "svelteBracketNewLine": true,
+  "svelteSortOrder": "options-scripts-markup-styles",
+  "svelteStrictMode": false,
+  "svelteIndentScriptAndStyle": true,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
