--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@zerodevx/svelte-json-view": "^1.0.3",
     "clipboard-copy": "^4.0.1",
     "svelvet": "github:bgins/Svelvet#custom-for-homestar"
   }
